--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon_logo.ico" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Portfolio</title>
     <script src="https://kit.fontawesome.com/56182c1d45.js" crossorigin="anonymous"></script>
@@ -102,7 +103,7 @@
       <div>
         <h4>Keep on rocking in the tech world!</h4>
       </div>
-      
+
       <div>
         <a href="https://github.com/soundslikeandrej" target="_blank"><i class="fa-brands fa-github"></i></a>
         <a href="mailto:shuliakovskij@gmail.com"><i class="fa-sharp fa-solid fa-envelope"></i></a>
