added proper links to github repositories of projets

--- a/src/index.html
+++ b/src/index.html
@@ -75,21 +75,24 @@
         <div class="container_one">
           <div class="overlay_one">
             <h4>Artist Website</h4>
-            <a href="https://soundslikeandrej.com/" target="_blank">Visit</a>
+            <a href="https://github.com/soundslikeandrej/website.github.io" target="_blank">Source Code</a>
+            <a href="https://soundslikeandrej.github.io/website.github.io/" target="_blank">Website Preview</a>
           </div>
         </div>
   
         <div class="container_two">
           <div class="overlay_two">
             <h4>Basic Bootstrap Page</h4>
-            <a href="./bootstrap_page/index.html" target="_blank">Visit</a>
+            <a href="https://github.com/soundslikeandrej/bootstrap_page" target="_blank">Source Code</a>
+            <a href="https://soundslikeandrej.github.io/bootstrap_page/" target="_blank">Website Preview</a>
           </div>
         </div>
   
         <div class="container_three">
           <div class="overlay_three">
             <h4>Page Made With Grid</h4>
-            <a href="./grid_page/index.html"  target="_blank">Visit</a>
+            <a href="https://github.com/soundslikeandrej/grid_page" target="_blank">Source Code</a>
+            <a href="https://soundslikeandrej.github.io/grid_page/" target="_blank">Website Preview</a>
           </div>
         </div>
       </div>
